# django-channels

./: .gitignore  .python-version  db.sqlite3  db.sqlite3_oauth  pyproject.toml
chat/: consumers.py  routing.py
chat/templates/chat/: index.html  room.html
config/: settings.py  urls.py
members/: admin.py  apis.py  models.py  serializers.py  urls.py  views.py
members/migrations/: 0001_initial.py  0002_auto_20200417_1324.py
members/templates/members/: hello.html  index.html
